Update JiraOperation.java